# kaggle

./: .gitignore  README.md  notebookb630f17e6a.ipynb  requirements.txt
cookiecutter_data_science_(ccds)_-_test/: Makefile  README.md  pyproject.toml
cookiecutter_data_science_(ccds)_-_test/docs/: mkdocs.yml
cookiecutter_data_science_(ccds)_-_test/docs/docs/: index.md
cookiecutter_data_science_(ccds)_-_test/dummy_module/: __init__.py  dataset.py  features.py  plots.py
cookiecutter_data_science_(ccds)_-_test/dummy_module/modeling/: predict.py  train.py
house-prices-advanced-regression-techniques/src/: house-prices-prediction-using-tfdf.ipynb  src.py
house-prices-advanced-regression-techniques/working/: 00_EDA_housing_project.ipynb  01_Data_Processing_housing_project.ipynb  01_Pipelines_housing_project.ipynb  01_post_data_processing_submission.csv  02_Modeling_housing_project.ipynb  02a_stacked_model_submission.csv  02c_stacked_model_submission_xgb.csv  02e_stacked_model_submission_with_rf.csv  02f_stacked_model_submission_extra_drop.csv  02g_stacked_model_submission_drop_xgb.csv  02h_stacked_model_submission_add_ridge.csv  02j_stacked_model_submission_diff_order.csv  README.md  ZZ_Scratchwork_housing_project.ipynb  baseline_submission.csv  fitted_preprocessor.joblib  implementation.ipynb  preprocessor.joblib  processed_baseline_submission.csv  submission.csv
house-prices-advanced-regression-techniques/working/submissions/: 00_first_submission.csv  01_post_data_processing_submission.csv  02b_stacked_model_submission_log_scale.csv  02k_ridgecv_final.csv  (+10 more)
